# claude-learn

./: .gitignore  README.md  README_new.md  __init__.py  agent_loop.py  config.py  hello.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
.tasks/: task_1.json  task_2.json  task_3.json  task_4.json  task_5.json  task_6.json  task_7.json
.teams/inbox/: alice.jsonl  bob.jsonl
.transcripts/: transcript_1776610823.jsonl  transcript_1776611096.jsonl
core/: context.py
